...
  	return(
  	<>
  	<View style={styles.loginContainer}>
      <View style={styles.logoContainer}>
        <Image source={require('../res/images/toptal-logo.png')} style={styles.loginToptalLogo} />
      </View>
      <Text h3 style={styles.loginHeader}>Apartment Rental App</Text>
      <Divider style={styles.smallDivider}/>
      {this.state.isError ?
        <Text h4 style={styles.errorText}>{this.state.errorMessage}</Text>     
        :
        <Text h4 style={styles.loginText}>Enter login details </Text>
      }
...
          <Icon
            name="arrow-right"
            size={15}
            color="white"
          />
        }
        testID={'login'}
        title="Login"
        onPress={() => this.signIn()}
      />
      <Text testID={'register'} style={styles.signUpText} onPress={() => this.props.navigation.navigate('register')}>
        {'\n'} Not registered? Sign up now.
      </Text>
...
