...
import React from 'react';
import { connect } from "react-redux";
import { Alert, SafeAreaView, Image, StyleSheet, ScrollView, View, StatusBar, Linking } from 'react-native';
import styles from './styles';
import Icon from 'react-native-vector-icons/FontAwesome';
import { Avatar, Input, Button, Divider, Text, Overlay, Card } from 'react-native-elements';
import { register, verifyMail } from "../actions/register";
import UserDetailView from './UserDetailView';

class Register extends React.Component{

  static navigationOptions = {
    title: "Register"
...
  	this.props.register(data)
    .then(() => {
      if(this.props.registerEmail !== null){
      	this.props.verifyMail(this.props.registerEmail)
      	.then(() => {
      	  if (this.props.verMailSent){
      	  	Alert.alert('Verification Email sent. Verify your email and continue');
      	    this.props.navigation.navigate('login');
      	  }
      	  else{
      	  	Alert.alert('Could not send vefification mail, try again');
      	  }   	  
      	})
...
